k8s/deployment/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simpleapi
  namespace: api
spec:
  selector:
    matchLabels:
      app: simpleapi # has to match .spec.template.metadata.labels
  serviceName: simpleapi
  template:
    metadata:
      labels:
        app: simpleapi # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: simpleapi
          image: hub.docker.com/doniyozov/api:v1
          imagePullPolicy: Always
          ports:
            - containerPort: 80
