k8s/deployment/full-working-rollout-with-istio.yml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  name: simpleapi-prod
  namespace: api
  labels:
    app: simpleapi-prod
spec:
  selector:
    matchLabels:
      app: simpleapi-prod # has to match .spec.template.metadata.labels
  revisionHistoryLimit: 1
  #replicas: 4
  strategy:
    canary:
      stableService: simpleapi-prod-stable-service #required
      canaryService: simpleapi-prod-canary-service #required
      trafficRouting:
        managedRoutes:
          - name: set-version
        istio:
          virtualService:
            name: rollout-vsvc
            routes:
              - primary # optional if there is a single route in VirtualService, required otherwise
      steps:
        - setWeight: 50
        - setHeaderRoute:
            name: "set-version"
            match:
              - headerName: version
                headerValue:
                  prefix: v3
        - pause: {}
        - setHeaderRoute:
            name: "set-version"
  template:
    metadata:
      labels:
        app: simpleapi-prod # has to match .spec.selector.matchLabels
    spec:
      containers:
        - name: simpleapi
          image: niazovd/api:v4
          imagePullPolicy: Always
          ports:
            - containerPort: 80
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: rollout-vsvc
  namespace: api
spec:
  gateways:
    - gateway
  hosts:
    - "*"
  http:
    - name: primary
      match:
        - uri:
            prefix: /
          ignoreUriCase: true # Case-Insensitive
      route:
        - destination:
            host: simpleapi-prod-stable-service # referenced in canary.stableService
          weight: 100
        - destination:
            host: simpleapi-prod-canary-service # referenced in canary.canaryService
          weight: 0
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-prod-stable-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-prod
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80
      protocol: TCP
      name: http
---
apiVersion: v1
kind: Service
metadata:
  name: simpleapi-prod-canary-service
  namespace: api
spec:
  type: ClusterIP
  selector:
    app: simpleapi-prod
  ports:
    - port: 80 #This port is the port which belongs to ClusterIP which will be exposed
      targetPort: 80
      protocol: TCP
      name: http
